# astrum

./: .gitattributes  .gitignore  Cargo.toml  README-zh.md  README.md  gridap.jl.md
crates/astrum/: Cargo.toml
crates/astrum-core/: Cargo.toml
crates/astrum-mesh/: Cargo.toml
crates/astrum-mesh/src/: cartesian.rs  lib.rs  tools.rs
crates/gmsh/: .gitignore  Cargo.toml  build.rs
crates/gmsh/.cargo/: config.toml
crates/gmsh/include/: gmshc.h
crates/gmsh/src/: bindings.rs  error.rs  lib.rs  logger.rs
